--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<!--<h1>Books#show</h1>-->
+<!--<p>Find me in app/views/books/show.html.erb</p>-->
+
+<h2>Title:</h2>
+<p><%= @book.title %></p>
+
+<h2>Body:</h2>
+<p><%= @book.body %></p>
+
+<span>
+  <%= link_to "Edit", "/books/:id/edit" %>
+</span>
+<span>
+  <%= link_to "Back", "/books" %>
+</span>
+
