--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Book</h1>
 
-<%= form_with model: @book, local:true do |f| %>
+<%= form_with model: @book, url: update_book_path(@book.id) , method: :patch, local:true do |f| %>
 
   <h4>Title</h4>
   <%= f.text_field :title %>
@@ -9,5 +9,8 @@
   <%= f.text_area :body %>
 
   <%= f.submit 'Update Book' %>
+
+  <%= link_to "Show", show_book_path(@book.id) %>
+  <%= link_to "Back", index_book_path %>
 
 <% end %>
