--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,7 @@
 <!--<h1>Books#show</h1>-->
 <!--<p>Find me in app/views/books/show.html.erb</p>-->
-
+    
+    
 <h2>Title:</h2>
 <p><%= @book.title %></p>
 
@@ -8,9 +9,9 @@
 <p><%= @book.body %></p>
 
 <span>
-  <%= link_to "Edit", "/books/:id/edit" %>
+  <%= link_to "Edit", edit_book_path(@book.id) %>
 </span>
 <span>
-  <%= link_to "Back", "/books" %>
+  <%= link_to "Back", index_book_path %>
 </span>
 
