--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,14 +1,25 @@
 <h1>Editing Book</h1>
 
-<%= form_with model: @book, url: update_book_path(@book.id) , method: :patch, local:true do |f| %>
+<% if @book.errors.any? %>
+  <p class ="error_message"><%= @book.errors.count %> errors prohibited this book from being saved:</p>
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li class ="error_message"><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
-  <h4>Title</h4>
+<%= form_with model: @book, url: update_book_path(@book.id) , method: :patch, local　:true do |f| %>
+
+  <h2>Title</h2>
   <%= f.text_field :title %>
 
-  <h4>Body</h4>
+  <h2>Body</h2>
   <%= f.text_area :body %>
 
-  <%= f.submit 'Update Book' %>
+  <div class ="botton">
+    <%= f.submit 'Update Book' %>
+  </div>
 
   <%= link_to "Show", show_book_path(@book.id) %>
   <%= link_to "Back", index_book_path %>
