--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,14 @@
 <h1>Books</h1>
 
-<table>
+<table cellpadding = "5">
   <thead>
     <tr>
-      <th>Title</th>
+      <th align="center">Title</th>
       <th>Body</th>
       <th colspan ="3"></th>
     </tr>
   </thead>
-  
+
   <tbody>
     <% @books.each do |book| %>
       <tr>
@@ -29,10 +29,10 @@
 <h2>New Book</h2>
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <p class ="error_message"><%= @book.errors.count %> errors prohibited this book from being saved:</p>
   <ul>
     <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+      <li class ="error_message"><%= message %></li>
     <% end %>
   </ul>
 <% end %>
@@ -45,6 +45,8 @@
   <h4>Body</h4>
   <%= f.text_area :body %>
 
-  <%= f.submit 'Create Book' %>
+  <div class ="botton">
+    <%= f.submit 'Create Book' %>
+  </div>
 <% end %>
 
