--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -9,7 +9,7 @@
   </ul>
 <% end %>
 
-<%= form_with model: @book, url: update_book_path(@book.id) , method: :patch, local　:true do |f| %>
+<%= form_with model: @book, url: book_path(@book.id) , method: :patch, local　:true do |f| %>
 
   <h2>Title</h2>
   <%= f.text_field :title %>
@@ -21,7 +21,7 @@
     <%= f.submit 'Update Book' %>
   </div>
 
-  <%= link_to "Show", show_book_path(@book.id) %>
-  <%= link_to "Back", index_book_path %>
+  <%= link_to "Show", book_path(@book.id) %>
+  <%= link_to "Back", books_path %>
 
 <% end %>
