--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,10 +12,6 @@
   <%= @book.body %>
 </p>
 
-<span>
-  <%= link_to "Edit", edit_book_path(@book.id) %>
-</span>
-<span>
-  <%= link_to "Back", index_book_path %>
-</span>
+<%= link_to "Edit", edit_book_path(id: @book.id) %>
+<%= link_to "Back", books_path %>
 
